fix: fix multiple bugs that were introduced after the code cleanup